feat: Creating a HTTP server with Express

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "git@github.com:martinsgabriel1956/myContacts.git",
   "author": "Gabriel Martins <martinsgabriel@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
