--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Gabriel Martins <martinsgabriel@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node --watch ./src/index.js"
+    "dev": "node --watch ./src/index.js"
   },
   "dependencies": {
     "express": "^4.18.2"
