--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "author": "Gabriel Martins <martinsgabriel@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "node --watch ./src/index.js"
+    "dev": "node --watch ./src/index.js",
+    "lint": "eslint ./src --fix"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
-    "pg": "^8.9.0"
+    "pg": "^8.13.0"
   },
   "devDependencies": {
-    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.2"
+    "eslint-plugin-import": "^2.31.0"
   }
 }
